<resources>
    <string name="app_name">Numvert</string>
    <string name="convert">Convert</string>
    <string name="settings">Settings</string>
    <string name="from">FROM</string>
    <string name="meters">Meters</string>
    <string name="feet">Feet</string>
    <string name="to">TO</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="clear">CLEAR</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="decimal_0">0.0</string>

    <string-array name="measurements">
        <item>mm</item>
        <item>cm</item>
        <item>m</item>
        <item>km</item>
        <item>in</item>
        <item>ft</item>
        <item>yd</item>
        <item>mi</item>
        <item>nmi</item>
    </string-array>
</resources>