<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ConvertActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/tabRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:gravity="center">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/convert" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:onClick="settingsClicked"
                android:text="@string/settings" />
        </TableRow>

        <TableRow
            android:id="@+id/fromRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red">

            <TextView
                android:id="@+id/fromDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:text="@string/from"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/fromEntryRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/fromUnitsDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:text="@string/meters"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/fromUnitsEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/toRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:text="@string/to" />
        </TableRow>

        <TableRow
            android:id="@+id/toEntryRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/toUnitsDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:text="@string/feet"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/conversionDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textAlignment="textEnd"
                android:textSize="50sp"
                android:typeface="monospace" />
        </TableRow>

        <View
            android:id="@+id/hr"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TableRow
            android:id="@+id/keypadRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_7"
                android:textSize="30sp" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_8"
                android:textSize="30sp" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_9"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/keypadRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_4"
                android:textSize="30sp" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_5"
                android:textSize="30sp" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_6"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/keypadRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_1"
                android:textSize="30sp" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_2"
                android:textSize="30sp" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_3"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/keypadRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clearButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clearClicked"
                android:text="@string/clear"
                android:textSize="25sp" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="keypadClicked"
                android:text="@string/_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/decimalButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="decimalClicked"
                android:text="@string/decimal"
                android:textSize="30sp" />

        </TableRow>
    </TableLayout>


</androidx.appcompat.widget.LinearLayoutCompat>